[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/shopUI.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[node name="ShopUI" type="Node2D"]
script = ExtResource( 1 )

[node name="ShopContainer" type="HBoxContainer" parent="."]
margin_right = 1019.0
margin_bottom = 200.0
rect_min_size = Vector2( 1000, 200 )

[node name="buttonHolder" type="VBoxContainer" parent="ShopContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 5

[node name="Reveal" type="Button" parent="ShopContainer/buttonHolder"]
margin_right = 200.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.827451, 0.831373, 0.0980392, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reveal"

[node name="key" type="Label" parent="ShopContainer/buttonHolder/Reveal"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Q"

[node name="gold" type="RichTextLabel" parent="ShopContainer/buttonHolder/Reveal"]
margin_left = 4.0
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "4[color=#e6c829]G[/color]"
text = "4G"
scroll_active = false

[node name="Roll" type="Button" parent="ShopContainer/buttonHolder"]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.105882, 0.992157, 0.243137, 1 )
custom_fonts/font = SubResource( 2 )
text = "Roll"

[node name="key" type="Label" parent="ShopContainer/buttonHolder/Roll"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "E"

[node name="gold" type="RichTextLabel" parent="ShopContainer/buttonHolder/Roll"]
margin_left = 4.0
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "2[color=#e6c829]G[/color]"
text = "2G"
scroll_active = false

[node name="rollButtons" type="HBoxContainer" parent="ShopContainer"]
margin_left = 204.0
margin_right = 1019.0
margin_bottom = 200.0
custom_constants/separation = 5

[node name="upgrade1" type="Button" parent="ShopContainer/rollButtons"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="upgrade1Text" type="RichTextLabel" parent="ShopContainer/rollButtons/upgrade1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="Label" type="Label" parent="ShopContainer/rollButtons/upgrade1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "1"

[node name="upgrade2" type="Button" parent="ShopContainer/rollButtons"]
margin_left = 205.0
margin_right = 405.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="upgrade2Text" type="RichTextLabel" parent="ShopContainer/rollButtons/upgrade2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
mouse_filter = 2

[node name="Label" type="Label" parent="ShopContainer/rollButtons/upgrade2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
text = "2"

[node name="upgrade3" type="Button" parent="ShopContainer/rollButtons"]
margin_left = 410.0
margin_right = 610.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="upgrade3Text" type="RichTextLabel" parent="ShopContainer/rollButtons/upgrade3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
mouse_filter = 2

[node name="Label" type="Label" parent="ShopContainer/rollButtons/upgrade3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
text = "3"

[node name="upgrade4" type="Button" parent="ShopContainer/rollButtons"]
margin_left = 615.0
margin_right = 815.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="upgrade4Text" type="RichTextLabel" parent="ShopContainer/rollButtons/upgrade4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
mouse_filter = 2

[node name="Label" type="Label" parent="ShopContainer/rollButtons/upgrade4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 9 )
text = "4"

[connection signal="pressed" from="ShopContainer/buttonHolder/Reveal" to="." method="_on_Reveal_pressed"]
[connection signal="pressed" from="ShopContainer/buttonHolder/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="ShopContainer/rollButtons/upgrade1" to="." method="_on_upgrade1_pressed"]
[connection signal="pressed" from="ShopContainer/rollButtons/upgrade2" to="." method="_on_upgrade2_pressed"]
[connection signal="pressed" from="ShopContainer/rollButtons/upgrade3" to="." method="_on_upgrade3_pressed"]
[connection signal="pressed" from="ShopContainer/rollButtons/upgrade4" to="." method="_on_upgrade4_pressed"]
